--- a/projet_mlops.ipynb
+++ b/projet_mlops.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,13 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Fonction pour évaluer les performances du modèle\n",
     "from sklearn.pipeline import FunctionTransformer, make_pipeline\n",
+    "\n",
     "\n",
     "\n",
     "def eval_metrics(y_true, y_pred):\n",
@@ -349,7 +350,7 @@
     "cap_outliers_transformer = FunctionTransformer(cap_outliers)\n",
     "\n",
     "# Fonction pour construire le pipeline avec Random Forest\n",
-    "def build_pipeline_random_forest(algo_ml, handle_outliers=True,num_vars=['credit_lines_outstanding', 'loan_amt_outstanding', 'total_debt_outstanding', 'income', 'years_employed', 'fico_score']):\n",
+    "def build_pipeline_random_forest(algo_ml, handle_outliers=False,num_vars=['credit_lines_outstanding', 'loan_amt_outstanding', 'total_debt_outstanding', 'income', 'years_employed', 'fico_score']):\n",
     "    \"\"\"\n",
     "    Construire un pipeline pour Random Forest avec gestion optionnelle des outliers.\n",
     "    \n",
@@ -360,7 +361,7 @@
     "    if handle_outliers:\n",
     "        numeric_transformer = make_pipeline(cap_outliers_transformer)  # Gestion des outliers\n",
     "    else:\n",
-    "        numeric_transformer = make_pipeline()  # Pas de traitement d'outliers\n",
+    "        numeric_transformer = 'passthrough'  # Pas de traitement d'outliers\n",
     "\n",
     "    # Combinaison des transformations dans un ColumnTransformer\n",
     "    preprocessor = ColumnTransformer(\n",
@@ -373,102 +374,25 @@
     "    model = Pipeline(steps=[('preprocessing', preprocessor),\n",
     "                            ('regressor', algo_ml)])\n",
     "  \n",
-    "    return model\n"
+    "    return model\n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/09/08 10:39:30 INFO mlflow.tracking.fluent: Experiment with name 'Random_Forest_Experiment' does not exist. Creating a new experiment.\n",
-      "2024/09/08 10:39:30 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'c32fc726fa2442fa9e77d1c01a51f642', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
-      "2024/09/08 10:39:30 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
-      "2024/09/08 10:39:30 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
-      "2024/09/08 10:39:30 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
-      "2024/09/08 10:39:33 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
-      "2024/09/08 10:39:37 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/fatimetouzeine/anaconda3/lib/python3.10/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
-      "2024/09/08 10:39:39 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on Train Data (rf_200_trees_depth_15_split_5): 1.0\n",
-      "Accuracy on Validation Data (rf_200_trees_depth_15_split_5): 0.9945\n",
-      "F1 Score on Train Data (rf_200_trees_depth_15_split_5): 1.0\n",
-      "F1 Score on Validation Data (rf_200_trees_depth_15_split_5): 0.986232790988736\n",
-      "ROC AUC on Train Data (rf_200_trees_depth_15_split_5): 1.0\n",
-      "ROC AUC on Validation Data (rf_200_trees_depth_15_split_5): 0.9909374999999999\n",
-      "Model run ID:  f290f0f043c54e1ea8e6b3fdfa7aec1d\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/09/08 10:39:45 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/fatimetouzeine/anaconda3/lib/python3.10/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
-      "2024/09/08 10:39:47 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on Train Data (rf_300_trees_depth_20_split_5): 1.0\n",
-      "Accuracy on Validation Data (rf_300_trees_depth_20_split_5): 0.9945\n",
-      "F1 Score on Train Data (rf_300_trees_depth_20_split_5): 1.0\n",
-      "F1 Score on Validation Data (rf_300_trees_depth_20_split_5): 0.986232790988736\n",
-      "ROC AUC on Train Data (rf_300_trees_depth_20_split_5): 1.0\n",
-      "ROC AUC on Validation Data (rf_300_trees_depth_20_split_5): 0.9909374999999999\n",
-      "Model run ID:  3548ed5115a74b8e886a7850692d3b87\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/09/08 10:39:52 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/fatimetouzeine/anaconda3/lib/python3.10/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
-      "2024/09/08 10:39:54 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on Train Data (rf_250_trees_depth_18_split_2): 1.0\n",
-      "Accuracy on Validation Data (rf_250_trees_depth_18_split_2): 0.994\n",
-      "F1 Score on Train Data (rf_250_trees_depth_18_split_2): 1.0\n",
-      "F1 Score on Validation Data (rf_250_trees_depth_18_split_2): 0.9849246231155779\n",
-      "ROC AUC on Train Data (rf_250_trees_depth_18_split_2): 1.0\n",
-      "ROC AUC on Validation Data (rf_250_trees_depth_18_split_2): 0.9887500000000001\n",
-      "Model run ID:  887a772c4d534560b9873aa8d5fb92de\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/09/08 10:39:58 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/fatimetouzeine/anaconda3/lib/python3.10/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
-      "2024/09/08 10:40:00 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on Train Data (rf_no_smote_no_outliers): 1.0\n",
-      "Accuracy on Validation Data (rf_no_smote_no_outliers): 0.9945\n",
-      "F1 Score on Train Data (rf_no_smote_no_outliers): 1.0\n",
-      "F1 Score on Validation Data (rf_no_smote_no_outliers): 0.986232790988736\n",
-      "ROC AUC on Train Data (rf_no_smote_no_outliers): 1.0\n",
-      "ROC AUC on Validation Data (rf_no_smote_no_outliers): 0.9909374999999999\n",
-      "Model run ID:  18944a2c551544f98b1b7d5e130a1fda\n"
+      "2024/09/08 12:23:59 INFO mlflow.tracking.fluent: Experiment with name 'Random_For_Experiment' does not exist. Creating a new experiment.\n",
+      "2024/09/08 12:23:59 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'ac6e3e6bab8f45b19058faf0b35d12a8', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
+      "2024/09/08 12:23:59 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
+      "2024/09/08 12:23:59 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
+      "2024/09/08 12:23:59 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "2024/09/08 12:24:02 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -477,7 +401,7 @@
     "# Définir les colonnes numériques\n",
     "\n",
     "# Préparer les données (X : features, y : target)\n",
-    "mlflow.set_experiment(\"Random_Forest_Experiment\")\n",
+    "mlflow.set_experiment(\"Random_For_Experiment\")\n",
     "\n",
     "\n",
     "# Définir les colonnes numériques sans la colonne 'default'\n",
@@ -505,10 +429,10 @@
     "\n",
     "# Configuration des différents runs avec ou sans SMOTE et avec ou sans gestion des outliers\n",
     "runs = [\n",
-    "    {\"n_estimators\": 200, \"max_depth\": 15, \"min_samples_split\": 5, \"max_features\": 'sqrt', \"run_name\": \"rf_200_trees_depth_15_split_5\", \"use_smote\": True, \"handle_outliers\": True},\n",
-    "    {\"n_estimators\": 300, \"max_depth\": 20, \"min_samples_split\": 5, \"max_features\": 'log2', \"run_name\": \"rf_300_trees_depth_20_split_5\", \"use_smote\": True, \"handle_outliers\": True},\n",
-    "    {\"n_estimators\": 250, \"max_depth\": 18, \"min_samples_split\": 2, \"max_features\": 'sqrt', \"run_name\": \"rf_250_trees_depth_18_split_2\", \"use_smote\": True, \"handle_outliers\": True},\n",
-    "    {\"n_estimators\": 200, \"max_depth\": 15, \"min_samples_split\": 5, \"max_features\": 'sqrt', \"run_name\": \"rf_no_smote_no_outliers\", \"use_smote\": False, \"handle_outliers\": False},  # Sans SMOTE et sans outliers\n",
+    "    {\"n_estimators\": 100, \"max_depth\": 15, \"min_samples_split\": 5, \"max_features\": 'sqrt', \"run_name\": \"rf_200_trees_depth_15_split_5\", \"use_smote\": True, \"handle_outliers\": True},\n",
+    "    {\"n_estimators\": 200, \"max_depth\": 20, \"min_samples_split\": 3, \"max_features\": 'log2', \"run_name\": \"rf_300_trees_depth_20_split_5\", \"use_smote\": True, \"handle_outliers\": True},\n",
+    "    {\"n_estimators\": 150, \"max_depth\": 18, \"min_samples_split\": 2, \"max_features\": 'sqrt', \"run_name\": \"rf_250_trees_depth_18_split_2\", \"use_smote\": True, \"handle_outliers\": True},\n",
+    "    {\"n_estimators\": 150, \"max_depth\": 15, \"min_samples_split\": 3, \"max_features\": 'sqrt', \"run_name\": \"rf_no_smote_no_outliers\", \"use_smote\": False, \"handle_outliers\": False},  # Sans SMOTE et sans outliers\n",
     "]\n",
     "\n",
     "# Boucle pour entraîner différents modèles avec des hyperparamètres optimisés\n",
@@ -524,21 +448,27 @@
     "                min_samples_split=run[\"min_samples_split\"], \n",
     "                max_features=run[\"max_features\"],  # Correction du paramètre ici\n",
     "                class_weight=\"balanced\"  # Gestion du déséquilibre des classes dans le modèle\n",
-    "            )\n",
+    "            ),\n",
+    "            handle_outliers = run[\"handle_outliers\"]\n",
     "        )\n",
-    "        \n",
-    "        # Entraîner le pipeline modèle sur les données après SMOTE\n",
-    "        model.fit(X_train_smote, y_train_smote)\n",
-    "        \n",
+    "\n",
+    "        if run[\"use_smote\"]:\n",
+    "            X_train_used, y_train_used = X_train_smote, y_train_smote\n",
+    "        else:\n",
+    "            X_train_used, y_train_used = X_train, y_train\n",
+    "\n",
+    "        # Entraîner le pipeline modèle sur les données sélectionnées (SMOTE ou non)\n",
+    "        model.fit(X_train_used, y_train_used)\n",
+    "\n",
     "        # Prédictions sur les données d'entraînement\n",
-    "        train_preds = model.predict(X_train_smote)\n",
-    "        \n",
+    "        train_preds = model.predict(X_train_used)\n",
+    "\n",
     "        # Métriques de performances sur les données d'entraînement\n",
-    "        train_accuracy, train_f1, train_roc_auc = eval_metrics(y_train_smote, train_preds)\n",
-    "        \n",
+    "        train_accuracy, train_f1, train_roc_auc = eval_metrics(y_train_used, train_preds)\n",
+    "\n",
     "        # Prédictions sur les données de validation\n",
     "        val_preds = model.predict(X_val)\n",
-    "        \n",
+    "\n",
     "        # Métriques de performances sur les données de validation\n",
     "        val_accuracy, val_f1, val_roc_auc = eval_metrics(y_val, val_preds)\n",
     "        \n",
@@ -673,26 +603,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-08 10:40:12 +0200] [53517] [INFO] Starting gunicorn 23.0.0\n",
-      "[2024-09-08 10:40:12 +0200] [53517] [INFO] Listening at: http://127.0.0.1:8081 (53517)\n",
-      "[2024-09-08 10:40:12 +0200] [53517] [INFO] Using worker: sync\n",
-      "[2024-09-08 10:40:12 +0200] [53518] [INFO] Booting worker with pid: 53518\n",
-      "[2024-09-08 10:40:12 +0200] [53519] [INFO] Booting worker with pid: 53519\n",
-      "[2024-09-08 10:40:12 +0200] [53520] [INFO] Booting worker with pid: 53520\n",
-      "[2024-09-08 10:40:12 +0200] [53521] [INFO] Booting worker with pid: 53521\n",
+      "[2024-09-08 12:19:55 +0200] [18547] [INFO] Starting gunicorn 23.0.0\n",
+      "[2024-09-08 12:19:55 +0200] [18547] [INFO] Listening at: http://127.0.0.1:8081 (18547)\n",
+      "[2024-09-08 12:19:55 +0200] [18547] [INFO] Using worker: sync\n",
+      "[2024-09-08 12:19:55 +0200] [18548] [INFO] Booting worker with pid: 18548\n",
+      "[2024-09-08 12:19:55 +0200] [18549] [INFO] Booting worker with pid: 18549\n",
+      "[2024-09-08 12:19:55 +0200] [18550] [INFO] Booting worker with pid: 18550\n",
+      "[2024-09-08 12:19:55 +0200] [18551] [INFO] Booting worker with pid: 18551\n",
       "^C\n",
-      "[2024-09-08 10:41:32 +0200] [53517] [INFO] Handling signal: int\n",
-      "[2024-09-08 10:41:32 +0200] [53518] [INFO] Worker exiting (pid: 53518)\n",
-      "[2024-09-08 10:41:32 +0200] [53520] [INFO] Worker exiting (pid: 53520)\n",
-      "[2024-09-08 10:41:32 +0200] [53519] [INFO] Worker exiting (pid: 53519)\n",
-      "[2024-09-08 10:41:32 +0200] [53521] [INFO] Worker exiting (pid: 53521)\n"
+      "[2024-09-08 12:23:18 +0200] [18547] [INFO] Handling signal: int\n",
+      "[2024-09-08 12:23:18 +0200] [18548] [INFO] Worker exiting (pid: 18548)\n",
+      "[2024-09-08 12:23:18 +0200] [18551] [INFO] Worker exiting (pid: 18551)\n",
+      "[2024-09-08 12:23:18 +0200] [18549] [INFO] Worker exiting (pid: 18549)\n",
+      "[2024-09-08 12:23:18 +0200] [18550] [INFO] Worker exiting (pid: 18550)\n"
      ]
     }
    ],
