--- a/projet_mlops.ipynb
+++ b/projet_mlops.ipynb
@@ -726,7 +726,7 @@
     "\n",
     "# Préparer les données (X : features, y : target)\n",
     "num_vars = ['credit_lines_outstanding', 'loan_amt_outstanding', 'total_debt_outstanding', 'income', 'years_employed', 'fico_score']\n",
-    "X = X_data  # Tes données sans la colonne 'default'\n",
+    "X = X_data  # Less données sans la colonne 'default'\n",
     "y = y_data  # La colonne 'default' est la variable cible\n",
     "\n",
     "# Diviser les données en entraînement, validation et test\n",
