correction finale notebook

--- a/projet_mlops.ipynb
+++ b/projet_mlops.ipynb
@@ -919,30 +919,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "!mlflow server --host 127.0.0.1 --port 8081"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/09/08 10:46:17 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '114edfb305714ed4b3ee63de913495d4', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
-      "2024/09/08 10:46:17 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
-      "2024/09/08 10:46:17 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
-      "2024/09/08 10:46:17 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
-      "2024/09/08 10:46:19 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
-      "2024/09/08 10:46:19 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
-      "2024/09/08 10:46:19 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
-      "2024/09/08 10:46:19 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n"
+      "2024/09/08 21:08:42 INFO mlflow.tracking.fluent: Experiment with name 'Logistic_Regression_Experiment' does not exist. Creating a new experiment.\n",
+      "2024/09/08 21:08:43 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '7e05404ed0a4492a879ba175fef18574', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
+      "2024/09/08 21:08:43 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
+      "2024/09/08 21:08:43 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
+      "2024/09/08 21:08:43 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "2024/09/08 21:09:00 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2024/09/08 21:09:02 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
+      "2024/09/08 21:09:02 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
+      "2024/09/08 21:09:02 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "2024/09/08 21:09:11 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SMOTE applied for logreg_default.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mathi\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "2024/09/08 21:09:28 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"c:\\Users\\mathi\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
+      "2024/09/08 21:09:50 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on Train Data (logreg_default): 0.9846232179226069\n",
+      "Accuracy on Validation Data (logreg_default): 0.98\n",
+      "F1 Score on Train Data (logreg_default): 0.9846341711610868\n",
+      "F1 Score on Validation Data (logreg_default): 0.9507389162561576\n",
+      "ROC AUC on Train Data (logreg_default): 0.984623217922607\n",
+      "ROC AUC on Validation Data (logreg_default): 0.974375\n",
+      "Model run ID:  da9c16533bfd4e8b89e21591a3109e34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/09/08 21:09:50 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
+      "2024/09/08 21:09:50 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
+      "2024/09/08 21:09:50 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "2024/09/08 21:09:58 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SMOTE applied for logreg_C_0.5_iter_200.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/09/08 21:10:06 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"c:\\Users\\mathi\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
+      "2024/09/08 21:10:12 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on Train Data (logreg_C_0.5_iter_200): 0.9846232179226069\n",
+      "Accuracy on Validation Data (logreg_C_0.5_iter_200): 0.98\n",
+      "F1 Score on Train Data (logreg_C_0.5_iter_200): 0.9846341711610868\n",
+      "F1 Score on Validation Data (logreg_C_0.5_iter_200): 0.9507389162561576\n",
+      "ROC AUC on Train Data (logreg_C_0.5_iter_200): 0.984623217922607\n",
+      "ROC AUC on Validation Data (logreg_C_0.5_iter_200): 0.974375\n",
+      "Model run ID:  051ad78c42904dbc97678823037bf477\n",
+      "SMOTE not applied for logreg_no_smote_no_outliers.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mathi\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "2024/09/08 21:10:19 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"c:\\Users\\mathi\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
+      "2024/09/08 21:10:24 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on Train Data (logreg_no_smote_no_outliers): 0.9763333333333334\n",
+      "Accuracy on Validation Data (logreg_no_smote_no_outliers): 0.975\n",
+      "F1 Score on Train Data (logreg_no_smote_no_outliers): 0.9377192982456141\n",
+      "F1 Score on Validation Data (logreg_no_smote_no_outliers): 0.9397590361445783\n",
+      "ROC AUC on Train Data (logreg_no_smote_no_outliers): 0.9780451802163718\n",
+      "ROC AUC on Validation Data (logreg_no_smote_no_outliers): 0.9750000000000001\n",
+      "Model run ID:  b06f81b744fc463f9d01eb694dcf6eaf\n"
      ]
     }
    ],
